--- a/apple/static/css/base.css
+++ b/apple/static/css/base.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
 
 /* Table of Content
 ==================================================
@@ -17,6 +18,7 @@
 /* #Reset & Basics (Inspired by E. Meyers)
 ================================================== */
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+		font-family: ‘Noto Sans TC’, sans-serif;
 		margin: 0;
 		padding: 0;
 		border: 0;
@@ -26,6 +28,7 @@
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block; }
 	body {
+		font-family: ‘Noto Sans TC’, sans-serif;
 		line-height: 1; 
 		/*overflow-x: hidden;*/}
 	ol, ul {
@@ -44,8 +47,8 @@
 /* #Basic Styles
 ================================================== */
 	body {
-		background: #f7f7f7;
 		font: 12px Helvetica, Arial, sans-serif;
+		background: #f7f7f7;
 		line-height: 20px;
 		
 		color: #555;
@@ -59,30 +62,31 @@
 /* #Typography
 ================================================== */
 	h1, h2, h3, h4, h5, h6 {
+		font: 12px Helvetica, Arial, sans-serif;
 		color: #000;
 		font-family: 'Bitter', serif;
 		font-weight: normal; }
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; color: #000; }
-	h1 { font-size: 46px; line-height: 50px; margin-bottom: 20px;}
-	h2 { font-size: 35px; line-height: 40px; margin-bottom: 20px; }
-	h3 { font-size: 25px; line-height: 34px; margin-bottom: 20px; }
-	h4 { font-size: 21px; line-height: 30px; margin-bottom: 10px; }
-	h5 { font-size: 17px; line-height: 24px; margin-bottom: 10px; }
-	h6 { font-size: 14px; line-height: 21px; margin-bottom: 10px; }
+	h1 { font: 12px Helvetica, Arial, sans-serif; font-size: 46px; line-height: 50px; margin-bottom: 20px;}
+	h2 { font: 12px Helvetica, Arial, sans-serif; font-size: 35px; line-height: 40px; margin-bottom: 20px; }
+	h3 { font: 12px Helvetica, Arial, sans-serif; font-size: 25px; line-height: 34px; margin-bottom: 20px; }
+	h4 { font: 12px Helvetica, Arial, sans-serif; font-size: 21px; line-height: 30px; margin-bottom: 10px; }
+	h5 { font: 12px Helvetica, Arial, sans-serif; font-size: 17px; line-height: 24px; margin-bottom: 10px; }
+	h6 { font: 12px Helvetica, Arial, sans-serif; font-size: 14px; line-height: 21px; margin-bottom: 10px; }
 	.subheader { color: #777; }
 
 	p { margin: 0 0 20px 0; }
 	p img { margin: 0; }
 	img.left { float: left; margin-bottom: 20px; margin-right: 20px;}
 	img.right { float: right; margin-bottom: 20px; margin-left: 20px;}
-	p.lead { font-size: 21px; line-height: 27px; color: #777;  }
+	p.lead { font: 12px Helvetica, Arial, sans-serif; font-size: 21px; line-height: 27px; color: #777;  }
 
-	em { font-style: italic; }
-	strong { font-weight: bold; color: #333; }
-	small { font-size: 80%; }
+	em { font: 12px Helvetica, Arial, sans-serif; font-style: italic; }
+	strong { font: 12px Helvetica, Arial, sans-serif; font-weight: bold; color: #333; }
+	small { font: 12px Helvetica, Arial, sans-serif; font-size: 80%; }
 
 /*	Blockquotes  */
-	blockquote, blockquote p { font-size: 15px; line-height: 24px; color: #777; font-style: italic; }
+	blockquote, blockquote p { font: 12px Helvetica, Arial, sans-serif; font-size: 15px; line-height: 24px; color: #777; font-style: italic; }
 	blockquote { margin: 0 0 20px; padding: 0px 20px 0 19px; border-left: 1px solid #ddd; }
 	blockquote cite { display: block; font-size: 12px; color: #555; }
 	blockquote cite:before { content: "\2014 \0020"; }
