--- a/apple/templates/base.html
+++ b/apple/templates/base.html
@@ -63,8 +63,10 @@
 	
 		<div class="sixteen columns header">
         
-			<div class="logo"><a href="index.html"><img src="static/images/logo.png" alt="" /></a></div>
-            <div class="logotext">a responsive minimal portfolio template.</div>
+			<div class="logo"><a href="{{ url_for('trade.start') }}">
+            <img src="static/images/logo.jpg" alt="" /></a>
+            </div>
+            <div class="logotext"><h3>蘋果咬兩下</h3></div>
             <div class="mainmenu">
                 <div id="mainmenu" class="ddsmoothmenu">
                     <ul>
