--- a/apple/templates/index.html
+++ b/apple/templates/index.html
@@ -8,19 +8,23 @@
         	<div class="twelve columns alpha">
                 <div class="flexslider clearfix">
                     <ul class="slides">
-                        <li><img src="static/images/banner/banner1.jpg" alt="" /><p class="flex-caption">This is a pretty line of caption text.</p></li>
-                        <li><img src="static/images/banner/banner3.jpg" alt="" /></li>
-                        <li><img src="static/images/banner/banner4.jpg" alt="" /><p class="flex-caption">Mindblowing company slogan.</p></li>
+                    {% for banner in banners %}
+                    <li>
+                        <img src="static/images/banner/{{ banner.pic }}" alt="" />
+                        <p class="flex-caption">{{ banner.desc }}</p>
+                    </li>
+                    {% endfor %}
                     </ul>
                 </div>
             </div>
             <div class="four columns omega slidertext">
-				<h2>Sleek<br/> And Effective<span style="color:#ff004e;">.</span></h2>
-                <p><em>6 years of experience</em><br/>in
-                Professional Web Design.<br/>
-				Over <em>5.000 clients in 24 countries</em> all over the world.<br/><br/>
-The result is always the same: <em>Customer satisfaction and supreme quality!</em></p>
-<a href="#" class="link">&raquo; Read More</a>
+				<h2>二手蘋果 <br/>保障交易平台.</h2>
+                <p>本站提供 台灣銀行代收/代付 服務<br/>
+                任何交易未滿意可暫停支付<br/>
+				已超過 3972 筆交易在本平台完成.<br/><br/>
+                The result is always the same: <em>
+                Customer satisfaction and supreme quality!</em></p>
+            <a href="#" class="link">&raquo; Read More</a>
             </div>
 		</div>
         
@@ -28,85 +32,75 @@ The result is always the same: <em>Customer satisfaction and supreme quality!</e
 		================================================== -->
         
         <div class="sixteen columns row divide">
-        	<h3 class="titledivider">Our Work.</h3>
+        	<h3 class="titledivider">物件分類.</h3>
             <div class="rightlink"><a href="#" class="titlelink">&raquo; Portfolio</a></div>
             <div class="dividerline"></div>
         </div>
         
-        <div class="sixteen columns row portfolio_filter">
-        	<ul>
-                <li><a class="portfolio_selector" data-group="all-group" href="#">All Projects</a><span>|</span></li>
-                <li><a class="portfolio_selector" data-group="web-group" href="#">Web Design</a><span>|</span></li>
-                <li><a class="portfolio_selector" data-group="photoshop-group" href="#">Photoshop</a><span>|</span></li>
-                <li><a class="portfolio_selector" data-group="concepts-group" href="#">Concepts</a><span>|</span></li>
-                <li><a class="portfolio_selector" data-group="print-group" href="#">Print Design</a></li>
-            </ul>
-        </div><div class="clear"></div>
-        
 		<div class="sixteen columns row teasers portfolio">
         
-        	<div class="four columns teaser all-group web-group">
-               <a href="#" data-text="» Visit Project" class="hovering"><img src="static/images/thumbs/home_teaser1.jpg" alt="" class="scale-with-grid" /></a>
+        	<div class="four columns teaser all-group iphone-group">
+               <a href="#" data-text="» 前往選購" class="hovering"><img src="static/images/apple_its/macbook.jpg" alt="" class="scale-with-grid" /></a>
                <div class="pluswrap">
-                   <a href="#" class="bigplus"></a>
-                   <div class="topline"><a href="#">Desktopography</a></div>
-                   <div class="subline">Web Design</div>
+                   <!-- <a href="#" class="bigplus"></a> -->
+                   <div class="topline"><a href="#">MacBook</a></div>
+                   <div class="subline">100 件物品正在賣拍中</div>
                </div>
             </div>
 			<div class="four columns teaser all-group photoshop-group">
-                <a href="#" data-text="» Visit Project" class="hovering"><img src="static/images/thumbs/home_teaser2.jpg" alt="" class="scale-with-grid" /></a>
+                <a href="#" data-text="» 前往選購" class="hovering"><img src="static/images/apple_its/iphone.jpg" alt="" class="scale-with-grid" /></a>
                 <div class="pluswrap">
                     <a href="#" class="bigplus"></a>
-                    <div class="topline"><a href="#">Wurzburg</a></div>
-                    <div class="subline">Photoshop</div>
+                    <div class="topline"><a href="#">iPhone</a></div>
+                    <div class="subline">2482 件物品正在賣拍中</div>
                 </div>
             </div>
 			<div class="four columns teaser all-group concepts-group">
-                <a href="#" data-text="» Visit Project" class="hovering"><img src="static/images/thumbs/home_teaser3.jpg" alt="" class="scale-with-grid" /></a>
+                <a href="#" data-text="» 前往選購" class="hovering"><img src="static/images/apple_its/ipad.jpg" alt="" class="scale-with-grid" /></a>
                 <div class="pluswrap">
                     <a href="#" class="bigplus"></a>
-                    <div class="topline"><a href="#">Frankfurt</a></div>
-                    <div class="subline">Concepts</div>
+                    <div class="topline"><a href="#">iPad</a></div>
+                    <div class="subline">1130 件物品正在賣拍中</div>
                 </div>
             </div>
             <div class="four columns teaser all-group print-group">
-            	<a href="#" data-text="» Visit Project" class="hovering"><img src="static/images/thumbs/home_teaser4.jpg" alt="" class="scale-with-grid" /></a>
+            	<a href="#" data-text="» 前往選購" class="hovering"><img src="static/images/apple_its/imac.jpg" alt="" class="scale-with-grid" /></a>
                 <div class="pluswrap">
                     <a href="#" class="bigplus"></a>
-                    <div class="topline"><a href="#">Amsterdam</a></div>
-                    <div class="subline">Print Design</div>
+                    <div class="topline"><a href="#">iMac</a></div>
+                    <div class="subline">129 件物品正在賣拍中</div>
                 </div>
             </div>
             <div class="four columns teaser all-group concepts-group">
-               <a href="#" data-text="» Visit Project" class="hovering"><img src="static/images/thumbs/home_teaser5.jpg" alt="" class="scale-with-grid" /></a>
+               <a href="#" data-text="» 前往選購" class="hovering"><img src="static/images/apple_its/watch.jpg" alt="" class="scale-with-grid" /></a>
                <div class="pluswrap">
                    <a href="#" class="bigplus"></a>
-                   <div class="topline"><a href="#">Canberra</a></div>
-                   <div class="subline">Concepts</div>
+                   <div class="topline"><a href="#">Apple Watch</a></div>
+                   <div class="subline">628 件物品正在賣拍中</div>
                </div>
             </div>
 			<div class="four columns teaser all-group print-group">
-                <a href="#" data-text="» Visit Project" class="hovering"><img src="static/images/thumbs/home_teaser6.jpg" alt="" class="scale-with-grid" /></a>
+                <a href="#" data-text="» 前往選購" class="hovering"><img src="static/images/apple_its/pencil.jpg" alt="" class="scale-with-grid" /></a>
                 <div class="pluswrap">
                     <a href="#" class="bigplus"></a>
-                    <div class="topline"><a href="#">Townsville</a></div>
-                    <div class="subline">Print Design</div>
+                    <div class="topline"><a href="#">Apple Pencil</a></div>
+                    <div class="subline">52 件物品正在賣拍中</div>
                 </div>
             </div>
 			<div class="four columns teaser all-group web-group">
-                <a href="#" data-text="» Visit Project" class="hovering"><img src="static/images/thumbs/home_teaser7.jpg" alt="" class="scale-with-grid" /></a>
+                <a href="#" data-text="» 前往選購" class="hovering"><img src="static/images/apple_its/mouse.jpg" alt="" class="scale-with-grid" /></a>
                 <div class="pluswrap">
                     <a href="#" class="bigplus"></a>
-                    <div class="topline"><a href="#">Dragon Plane</a></div>
-                    <div class="subline">Web Design</div>
+                    <div class="topline"><a href="#">Magic Mouse</a></div>
+                    <div class="subline">209 件物品正在賣拍中</div>
                 </div>
             </div>
             <div class="four columns teaser all-group photoshop-group">
-            	<a href="#" data-text="» Visit Project" class="hovering"><img src="static/images/thumbs/home_teaser8.jpg" alt="" class="scale-with-grid" /></a>
+            	<a href="#" data-text="» 前往選購" class="hovering"><img src="static/images/apple_its/tv.jpg" alt="" class="scale-with-grid" /></a>
                 <div class="pluswrap">
                     <a href="#" class="bigplus"></a>
-                    <div class="topline"><a href="#">Nuremberg</a></div>
-                    <div class="subline">Photoshop</div>
+                    <div class="topline"><a href="#">Apple TV</a></div>
+                    <div class="subline">82 件物品正在賣拍中</div>
                 </div>
             </div>
             
@@ -118,8 +112,8 @@ The result is always the same: <em>Customer satisfaction and supreme quality!</e
         
         <div class="eight columns row">
             <div class="eight columns divide alpha">
-                <h3 class="titledivider">Latest News.</h3>
-                <div class="rightlink"><a href="#" class="titlelink">&raquo; Optional Link</a></div>
+                <h3 class="titledivider">近期完成交易.</h3>
+                <div class="rightlink"><a href="#" class="titlelink">&raquo; 更多近期完成交易</a></div>
                 <div class="dividerlinehalf"></div>
             </div>
             <div class="eight columns alpha">
@@ -147,40 +141,26 @@ The result is always the same: <em>Customer satisfaction and supreme quality!</e
         
         <div class="eight columns row">
             <div class="eight columns divide alpha">
-                <h3 class="titledivider">About.</h3>
-                <div class="rightlink"><a href="#" class="titlelink">&raquo; Optional Link</a></div>
+                <h3 class="titledivider">最新上架物件.</h3>
+                <div class="rightlink"><a href="#" class="titlelink">&raquo; 更多新上架的物品</a></div>
                 <div class="dividerlinehalf"></div>
             </div>
             <div class="eight columns alpha">
-
-				<p>Apex is a fully-responsive minimal portfolio template which will blow your clients minds. You can also get the <a href="#item/apex-responsive-portfolio-wordpress-theme/1597958?ref=damojo" target="_blank" class="link">WordPress Version</a>.</p>
-
-                <ul class="tabs">
-                    <li><a class="active" href="#concept">Concept</a></li>
-                    <li><a href="#design">Design</a></li>
-                    <li><a href="#support">Support</a></li>
-                </ul>
-                <ul class="tabs-content clearfix">
-                    <li class="active clearfix" id="concept">
-                        <div class="two_third"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p></div>
-                        <div class="one_third lastcolumn"><blockquote>"What a wonderful HTML Template!"</blockquote></div><div class="clear"></div>
-                    </li>
-                    <li id="design" class="clearfix">
-                        <p><img src="static/images/mobile.jpg" alt="" class="left"/>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-                    </li>
-                    <li id="support" class="clearfix">
-                        <div class="one_third">
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</p> 
-                        </div>
-                        <div class="one_third">
-                            <p>Tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p> 
-                        </div>
-                        <div class="one_third lastcolumn">
-                            <p>Sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p> 
-                        </div><div class="clear"></div>
-                    </li>
-                </ul><div class="clear"></div>
-
+            
+                <div class="eight columns alpha newsteaser row">
+                    <a href="#" class="borderhover"><img src="static/images/thumbs/from_blog1.jpg" alt="" width="75" height="75" /></a>
+                    <div class="topline"><a href="#">Blogpost With Image</a></div>
+                    <div class="subline">Jan 23 by Admin</div>
+                    <div class="newsexcerpt">Tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua diam nonumy eirmod...</div>
+                </div>
+                
+                <div class="eight columns alpha newsteaser">
+                    <a href="#" class="borderhover"><img src="static/images/thumbs/from_blog2.jpg" alt="" width="75" height="75" /></a>
+                    <div class="topline"><a href="#">Blogpost Slideshow</a></div>
+                    <div class="subline">Jan 23 by Admin</div>
+                    <div class="newsexcerpt">Tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua diam nonumy eirmod...</div>
+                </div>
+                
             </div>
 		</div> 
 		
