--- a/apple/templates/base.html
+++ b/apple/templates/base.html
@@ -82,7 +82,7 @@
                             <ul>  
                             </ul>
                         </li>
-                        <li><a href="#">登錄商品</a>
+                        <li><a href="{{ url_for('trade.add_rege') }}">登錄商品</a>
                             <ul>  
                             </ul>
                         </li>
