--- a/apple/templates/category.html
+++ b/apple/templates/category.html
@@ -32,7 +32,7 @@
                <a href="#" data-text="» Visit Project" class="hovering">
                 <img src="/static/images/apple_its/{{ item.item_pic }}" alt="" class="scale-with-grid" /></a>
                <div class="pluswrap">
-                   <a href="#" class="bigplus"></a>
+                   <a href="{{ url_for('trade.add_rege') }}" class="bigplus"></a>
                    <div class="topline"><a href="#">{{item.item_name}}</a></div>
                    <div class="subline"><a href="#">82 件物品拍賣中</a></div>
                </div>
