--- a/apple/templates/index.html
+++ b/apple/templates/index.html
@@ -45,7 +45,7 @@
                 <div class="pluswrap">
                     <!-- <a href="#" class="bigplus"></a> -->
                     <div class="topline"><a href="{{ url_for('trade.category', ctype=item.name) }}">{{item.name}}</a></div>
-                    <div class="subline">100 件物品正在賣拍中</div>
+                    <div class="subline">100 件物品</div>
                 </div>
             </div>
         {% endfor %}
